@@ -2,6 +2,13 @@ v3.9.6 (XXXX-XX-XX)
 -------------------
 
 * Fixed issue #17291: Server crash on error in the PRUNE expression.
+  Traversal PRUNE expressions containing JavaScript user-defined functions 
+  (UDFs) are now properly rejected in single server and cluster mode. 
+  PRUNE expressions that use UDFs require a V8 context for execution, 
+  which is not available on DB-servers in a cluster, and also isn't 
+  necessarily available for regular queries on single servers (a V8 context
+  is only available if a query was executed inside Foxx or from inside a JS 
+  transaction, but not otherwise).
 
 * Fixed BTS-1125 Fixes handling of primarySortCache and primaryKeyCache
   properties in ArangoSearch views.
